--- a/app-config.yaml
+++ b/app-config.yaml
@@ -301,6 +301,20 @@ auth:
         clientId: ${AUTH_ATLASSIAN_CLIENT_ID}
         clientSecret: ${AUTH_ATLASSIAN_CLIENT_SECRET}
         scope: ${AUTH_ATLASSIAN_SCOPES}
+    asgardeo:
+      development:
+        clientId: ${AUTH_ASGARDEO_CLIENT_ID}
+        clientSecret: ${AUTH_ASGARDEO_CLIENT_SECRET}
+        issuer: ${AUTH_ASGARDEO_ISSUER}
+        authorizationUrl: ${AUTH_ASGARDEO_AUTHORIZATION_URL}
+        tokenUrl: ${AUTH_ASGARDEO_TOKEN_URL}
+        userInfoUrl: ${AUTH_ASGARDEO_USER_INFO_URL}
+        callbackUrl: ${AUTH_ASGARDEO_CALLBACK_URL}
+        scopes: ${AUTH_ASGARDEO_SCOPES}
+        signIn:
+          resolver:
+            - resolver: emailMatchingUserEntityNameProfile
+              profileTransform: asgardeo
     myproxy: {}
     guest: {}
 
