--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "test": "NODE_OPTIONS='--no-node-snapshot --experimental-vm-modules' backstage-cli repo test",
     "test:all": "NODE_OPTIONS='--no-node-snapshot --experimental-vm-modules' backstage-cli repo test --coverage",
     "test:e2e": "NODE_OPTIONS=--no-node-snapshot playwright test",
-    "tsc": "tsc",
+    "tsc": "NODE_OPTIONS='--max-old-space-size=8192' tsc",
     "tsc:full": "backstage-cli repo clean && tsc --skipLibCheck false --incremental false"
   },
   "lint-staged": {
