feat: add Asgardeo backend module for catalog plugin
- Created a new plugin `@backstage/plugin-catalog-backend-module-asgardeo` to integrate Asgardeo with the Backstage catalog.
- Implemented the `AsgardeoEntityProvider` to fetch users and groups from Asgardeo.
- Added configuration options for the Asgardeo provider including organization URL, client ID, and client secret.
- Set up scheduled tasks to refresh entities from Asgardeo every 30 minutes.
- Included necessary ESLint configuration and README documentation for the new module.

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -163,6 +163,13 @@ catalog:
       plugins:
         - catalog
         - search
+    asgardeo:
+      orgUrl: https://api.asgardeo.io/t/starkindustriesdemo/
+      clientId: ${ASGARDEO_CATALOG_CLIENT_ID}
+      clientSecret: ${ASGARDEO_CATALOG_SECRET}
+      schedule:
+        frequency: { minutes: 30 }
+        timeout: { minutes: 10 }
   locations:
     # Add a location here to ingest it, for example from a URL:
     #
@@ -313,7 +320,7 @@ auth:
         scopes: ${AUTH_ASGARDEO_SCOPES}
         signIn:
           resolver:
-            - resolver: emailMatchingUserEntityNameProfile
+            - resolver: emailLocalPartMatchingUserEntityName
               profileTransform: asgardeo
     myproxy: {}
     guest: {}
