--- a/plugins/catalog-backend-module-asgardeo/package.json
+++ b/plugins/catalog-backend-module-asgardeo/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@backstage/plugin-auth-backend-module-asgardeo",
+  "name": "@backstage/plugin-catalog-backend-module-asgardeo",
   "version": "0.1.0",
   "license": "Apache-2.0",
   "private": true,
-  "description": "The asgardeo backend module for the auth plugin.",
+  "description": "The asgardeo backend module for the catalog plugin.",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "publishConfig": {
@@ -13,7 +13,7 @@
   },
   "backstage": {
     "role": "backend-plugin-module",
-    "pluginId": "auth"
+    "pluginId": "catalog"
   },
   "scripts": {
     "start": "backstage-cli package start",
@@ -25,17 +25,15 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/backend-plugin-api": "^1.4.3",
-    "@backstage/plugin-auth-backend-module-oidc-provider": "^0.4.7",
-    "@backstage/plugin-auth-node": "workspace:^",
-    "oauth": "^0.10.2",
-    "passport-oauth2": "^1.8.0"
+    "@backstage/backend-plugin-api": "workspace:^",
+    "@backstage/backend-tasks": "^0.6.1",
+    "@backstage/catalog-model": "workspace:^",
+    "@backstage/config": "workspace:^",
+    "@backstage/plugin-catalog-node": "workspace:^"
   },
   "devDependencies": {
-    "@backstage/backend-test-utils": "^1.9.0",
-    "@backstage/cli": "^0.34.2",
-    "@types/oauth": "^0",
-    "@types/passport-oauth2": "^1.8.0"
+    "@backstage/backend-test-utils": "workspace:^",
+    "@backstage/cli": "workspace:^"
   },
   "files": [
     "dist"
