--- a/app-config.yaml
+++ b/app-config.yaml
@@ -312,16 +312,16 @@ auth:
       development:
         clientId: ${AUTH_ASGARDEO_CLIENT_ID}
         clientSecret: ${AUTH_ASGARDEO_CLIENT_SECRET}
-        issuer: ${AUTH_ASGARDEO_ISSUER}
         authorizationUrl: ${AUTH_ASGARDEO_AUTHORIZATION_URL}
+        issuer: ${AUTH_ASGARDEO_ISSUER}
         tokenUrl: ${AUTH_ASGARDEO_TOKEN_URL}
         userInfoUrl: ${AUTH_ASGARDEO_USER_INFO_URL}
         callbackUrl: ${AUTH_ASGARDEO_CALLBACK_URL}
         scopes: ${AUTH_ASGARDEO_SCOPES}
         signIn:
-          resolver:
+          resolvers:
             - resolver: emailLocalPartMatchingUserEntityName
-              profileTransform: asgardeo
+            - profileTransform: asgardeo
     myproxy: {}
     guest: {}
 
