fix: improve error handling and logging for Asgardeo token and entity fetching

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -319,6 +319,7 @@ auth:
         callbackUrl: ${AUTH_ASGARDEO_CALLBACK_URL}
         scopes: ${AUTH_ASGARDEO_SCOPES}
         state: true
+        # pkce: true
         signIn:
           resolver:
             [
