--- a/app-config.yaml
+++ b/app-config.yaml
@@ -226,6 +226,8 @@ auth:
   #    path: my-sessions
 
   environment: development
+  session:
+    secret: "your-very-secret-session-key"
   ### Providing an auth.session.secret will enable session support in the auth-backend
   # session:
   #   secret: custom session secret
